# learn-anthropic

./: .env.example  001_requests.ipynb  CLAUDE.md  README.md  pyproject.toml
notebooks/: 001_requests.ipynb  002_requests.ipynb  002_system-prompts.ipynb  003_requests.ipynb  003_temperature.ipynb  004_streaming.ipynb  005_structured_output.ipynb  template.ipynb  utils.py
notebooks/01_accessing_claude_api/: 01_requests.ipynb  02_system_prompts.ipynb  03_temperature.ipynb  04_streaming.ipynb  05_structured_output.ipynb
notebooks/02_prompt_evaluation/: 001_prompt_evals.ipynb  dataset.json
notebooks/03_prompt_engineering/: 001_prompt_engineering.ipynb  002_prompt_engineering.ipynb  dataset.json
