[project]
name = "learn-anthropic"
version = "0.1.0"
description = "Claude with Google Vertex AI course notebooks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic[vertex]>=0.84.0",
    "google-auth>=2.49.0",
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
]
